// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      loading="lazy"
    />
    <figcaption
      className="css-0"
    >
      <div
        className="css-0"
      >
        Caption
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      loading="lazy"
    />
    <figcaption
      className="css-0"
    >
      <div
        className="css-0"
      >
        Credit
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      loading="lazy"
    />
    <figcaption
      className="css-0"
    >
      <div
        className="css-0"
      >
        Caption
      </div>
      <div
        className="css-0"
      >
        Credit
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 7`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 8`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 9`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 10`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 11`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 12`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 13`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 14`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 15`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 16`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 17`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 18`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u8qly9"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        loading="lazy"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 19`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 20`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    loading="lazy"
  />
</div>
`;
